# graphify-embeddings

./: .gitignore  LICENSE  README.md  config.example.toml  install.sh  plan.md  pyproject.toml
docs/plans/: 2026-07-15-persistent-model-worker.md
src/graphify_embeddings/: __init__.py  cli.py  client.py  config.py  gpu.py  graph.py  index.py  manager.py  models.py  service.py  worker.py
tests/: test_graphify_embeddings.py  test_worker.py
