[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "graphify-embeddings"
version = "0.1.2"
description = "Local Qwen3 semantic search and reranking for Graphify knowledge graphs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "THEman6989" }]
dependencies = ["numpy>=1.26"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
gpu = [
  "sentence-transformers>=5.4.0",
  "torch>=2.8.0",
  "transformers>=4.57.0",
  "qwen-vl-utils>=0.0.14",
  "scipy>=1.11",
]
dev = ["pytest>=8.0"]

[project.scripts]
graphify-embeddings = "graphify_embeddings.cli:main"

[project.urls]
Repository = "https://github.com/THEman6989/graphify-embeddings"
Issues = "https://github.com/THEman6989/graphify-embeddings/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/graphify_embeddings"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
