[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "graphify-embeddings"
version = "0.2.0"
description = "Local Qwen3 semantic search and reranking for Graphify knowledge graphs"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "THEman6989" }]
dependencies = ["numpy==2.4.6"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
gpu = [
  "sentence-transformers>=5.5.1,<5.7",
  "torch==2.13.0",
  "torchvision==0.28.0",
  "transformers==5.13.1",
  "qwen-vl-utils==0.0.14",
  "scipy==1.17.1",
  "nvidia-ml-py==13.610.43",
]
dev = ["pytest>=8.0"]

[project.scripts]
graphify-embeddings = "graphify_embeddings.cli:main"

[project.urls]
Repository = "https://github.com/THEman6989/graphify-embeddings"
Issues = "https://github.com/THEman6989/graphify-embeddings/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/graphify_embeddings"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
